Test/Examples/Demo.expected
Test/Examples/Demo.lean:3:4: warning: declaration uses 'sorry'
Test/Examples/Demo.lean:3:4: warning: declaration uses 'sorry'
Test/Examples/Demo.lean:16:14: warning: declaration uses 'sorry'
Test/Examples/Demo.lean:16:14: warning: declaration uses 'sorry'
goal: sum (Int.ofNat Nat.zero) = Int.ofNat Nat.zero * (Int.ofNat Nat.zero + 1) / 2

query:
(define-fun-rec sum ((n Int)) Int (ite (< n 0) 0 (+ n (sum (- n 1)))))
(assert (not (= (sum 0) (div (* 0 (+ 0 1)) 2))))
(check-sat)

result: unsat
failed to reconstruct proof: encountered errors elaborating cvc5 proof
Test/Examples/Demo.lean:17:19: error: incorrect number of universe levels GE.ge
Test/Examples/Demo.lean:27:18: error: expected ']'
Test/Examples/Demo.lean:31:13: error: expected ']'
Test/Examples/Demo.lean:34:13: error: expected ']'
